--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,30 @@
 html,body{
     font-family: 'Nunito', sans-serif;
 }
+
+/* 1 số code css dùng chung trong bài  */
+.title{
+    text-align: center;
+    padding: 30px;
+}
+
+.title h3{
+    font-size: 16px;
+    font-weight: 600;
+    color: #dc4f72;
+    line-height: 10px;
+}
+
+.title h2{
+    font-size: 55px;
+    font-weight: 700;
+    color: black;
+    line-height: 50px;
+}
+
+.title p{
+    font-size: 16px;
+    font-weight: 400;
+    color: #5a5a5a;
+    line-height: 30px;
+}
