--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html,body{
 
 .tools__item:hover{
     transform: translateY(-20px);
-    transition:; 0.5s
+    transition: all 0.5s;
 }
 
 .tools__item img{
