--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,11 @@ html,body{
     text-align: center;
     padding: 30px;
     margin: auto;
-    width: 63%;
+    width: 64%;
 }
 
 .title h3{
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 600;
     color: #dc4f72;
     line-height: 10px;
@@ -52,8 +52,10 @@ html,body{
 }
 
 .tools__item:hover{
-    transform: translateY(-20px);
+    transform: translateY(-10px);
     transition: all 0.5s;
+    background-color: white;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.09);
 }
 
 .tools__item img{
@@ -69,4 +71,248 @@ html,body{
 .tools__item p{
     color: #5a5a5a;
     font-size: 14px;
+}
+
+/* ABOUT US */
+
+.aboutUs{
+    background-color: #f7f9fc;
+}
+
+.title__left h3{
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 15px;
+    color: #dc4f72;
+}
+
+.title__left h2{
+    font-size: 35px;
+    font-weight: 600;
+    line-height: 40px;
+    color: #2c3038;;
+}
+
+.title__left p{
+    font-size: 15px;
+    font-weight: 400;
+    color: #5a5a5a;
+    line-height: 23px;
+}
+
+.title__right img{
+    max-width: 100%;
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+    border-radius: 5px;
+    transform: translateY(0);
+    transition: all 0.5s;
+}
+
+.title__right img:hover{
+    transform: translateY(-10px);
+    transition: all 0.5s;
+}
+
+.themeButton{
+    display: inline-block;
+    border-radius: 5px;
+    line-height: 52px;
+    font-weight: 700;
+    font-size: 14px;
+    margin: 0px;
+    padding: 0px 30px;
+    color: #fff;
+    background-color: #dc4f72;
+    border-color: transparent;
+    text-transform: uppercase;
+    transition: all 0.4s;
+}
+
+.themeButton:hover{
+    background-color: #ba254a;
+}
+
+.number__item{
+    background-color: #fff;
+    padding: 25px;
+    border-radius: 5px;
+    box-shadow: 1px 5px 7.5px rgba(196, 196, 196, 0.2);;
+    transition: all 0.4s;
+    border: 1px solid #eee;
+}
+
+.number__item h4{ 
+    font-size: 16px;
+    line-height: 24.5px;
+    color: #2c3038;
+    font-weight: 700;
+}
+
+.number__item p:first-of-type{
+    font-size: 55px;
+    line-height: 55px;
+    color: #dc4f72;
+    font-weight: 700;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
+.number__item p:last-of-type{
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #5a5a5a;
+}
+
+/* COMMIT */
+
+.commit{
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.33)), url(../img/bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat, no-repeat, no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 480px;
+    display: grid;
+    align-items: center;
+    padding: 20px 0;
+}
+
+.commit__title{
+    max-width: 550px;
+}
+
+.commit__title h3{
+    color: white;
+    font-size: 30px;
+    line-height: 36px;
+    font-weight: 700;
+}
+
+.commit__title p{
+    font-size: 16px;
+    color: #eee;
+    line-height: 25px;
+}
+
+.commit__title button{
+    background-color: #f8f9fa;
+    display: inline-block;
+    line-height: 52px;
+    font-weight: 700;
+    font-size: 14px;
+    border-color: transparent;
+    border-radius: 5px;
+    padding: 0px 30px;
+    text-transform: uppercase;
+    transition: all 0.4s;
+}
+
+.commit__title button:hover{
+    background-color: #e2e6ea;
+    transition: all 0.4s;
+}
+
+/* GENERAL */
+
+.general{
+    background-color: #f7f9fc;
+}
+
+.right__list ul{
+    list-style: none;
+    padding: 0;
+    max-width: 750px;
+    margin: 0 auto;
+}
+
+.right__list li{
+    position: relative;
+    padding: 25px 50px 5px 20px;
+    border: 1px solid #eee;
+    margin: 0 0 15px 0;
+    border-radius: 5px;
+    background: #fff;
+}
+
+.right__list input{
+    position: absolute;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    top: 0;
+    left: 0;
+}
+
+.right__list i{
+    position: absolute;
+    transform: translate(-6px, 0);
+    margin-top: 16px;
+    right: 25px;
+    top: 16px;
+}
+
+.right__list i::before{
+    content: "";
+    position: absolute;
+    background-color: #2c3038;
+    width: 3px;
+    height: 9px;
+    transform: translate(2px, 0) rotate(45deg);
+}
+
+.right__list i::after{
+    content: "";
+    position: absolute;
+    background-color: #2c3038;
+    width: 3px;
+    height: 9px;
+    transform: translate(-2px, 0) rotate(-45deg);
+}
+
+.right__list h2{
+    font-size: 20px;
+    line-height: 1;
+    font-weight: normal;
+    display: block;
+    margin: 0;
+    cursor: pointer;
+    color: #2c3038;
+}
+
+.right__list ul li input[type=checkbox]:checked ~ p{
+    margin-top: 0;
+    max-height: 0;
+    opacity: 0;
+    transform: translate(0, 50%);
+    transition: all 0.3s;
+}
+
+.right__list p{
+    color: #5a5a5a;
+    font-size: 16px;
+    line-height: 24.5px;
+    position: relative;
+    overflow: hidden;
+    max-height: 800px;
+    opacity: 1;
+    transform: translate(0, 0);
+    margin-top: 14px;
+    z-index: 2;
+    transition: all 0.3s;
+}
+
+.item__left img{
+    max-width: 100%;
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+    border-radius: 5px;
+    transform: translateY(0);
+    transition: all 0.5s;
+}
+
+.item__left img:hover{
+    transform: translateY(-10px);
+    transition: all 0.5s;
 }
