--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,36 @@ html,body{
     line-height: 30px;
 }
 
+.themeButton{
+    display: inline-block;
+    line-height: 52px;
+    font-weight: 700;
+    font-size: 14px;
+    margin: 0px;
+    padding: 0px 30px;
+    text-transform: uppercase;
+    transition: all 0.4s;
+}
+
+.btn__primary{
+    color: #fff;
+    background-color: #dc4f72;
+    border-color: #dc4f72;
+
+}
+
+.btn__outline__primary{
+    color: #dc4f72;
+    border-color: #dc4f72;
+
+}
+
+.btn__light{
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+
 /* TOOLS */
 .tools__content{
     margin: auto;
@@ -113,23 +143,11 @@ html,body{
     transition: all 0.5s;
 }
 
-.themeButton{
-    display: inline-block;
-    border-radius: 5px;
-    line-height: 52px;
-    font-weight: 700;
-    font-size: 14px;
-    margin: 0px;
-    padding: 0px 30px;
-    color: #fff;
-    background-color: #dc4f72;
-    border-color: transparent;
-    text-transform: uppercase;
-    transition: all 0.4s;
-}
-
-.themeButton:hover{
+.title__left .themeButton:hover{
     background-color: #ba254a;
+    border-color: transparent;
+    color: white;
+    transition: all 0.5s;
 }
 
 .number__item{
@@ -195,20 +213,7 @@ html,body{
     line-height: 25px;
 }
 
-.commit__title button{
-    background-color: #f8f9fa;
-    display: inline-block;
-    line-height: 52px;
-    font-weight: 700;
-    font-size: 14px;
-    border-color: transparent;
-    border-radius: 5px;
-    padding: 0px 30px;
-    text-transform: uppercase;
-    transition: all 0.4s;
-}
-
-.commit__title button:hover{
+.commit__title .themeButton:hover{
     background-color: #e2e6ea;
     transition: all 0.4s;
 }
@@ -235,7 +240,7 @@ html,body{
     background: #fff;
 }
 
-.right__list input{
+.right__list input[type=checkbox]{
     position: absolute;
     cursor: pointer;
     width: 100%;
@@ -246,7 +251,7 @@ html,body{
     left: 0;
 }
 
-.right__list i{
+.right__list ul li i{
     position: absolute;
     transform: translate(-6px, 0);
     margin-top: 16px;
@@ -254,22 +259,34 @@ html,body{
     top: 16px;
 }
 
-.right__list i::before{
+.right__list ul li i::before{
     content: "";
     position: absolute;
     background-color: #2c3038;
     width: 3px;
     height: 9px;
-    transform: translate(2px, 0) rotate(45deg);
+    transform: translate(2px, 0) rotate(-45deg);
+    transition: all 0.4s;
 }
 
-.right__list i::after{
+.right__list ul li input[type=checkbox]:checked ~ i::before{
+    transform: translate(-2px, 0) rotate(-45deg);
+
+}
+
+
+.right__list ul li i::after{
     content: "";
     position: absolute;
     background-color: #2c3038;
     width: 3px;
     height: 9px;
-    transform: translate(-2px, 0) rotate(-45deg);
+    transform: translate(-2px, 0) rotate(45deg);
+    transition: all 0.4s;
+}
+
+.right__list ul li input[type=checkbox]:checked ~ i::after{
+    transform: translate(2px, 0) rotate(45deg);
 }
 
 .right__list h2{
@@ -316,3 +333,156 @@ html,body{
     transform: translateY(-10px);
     transition: all 0.5s;
 }
+
+/* READY */
+
+.buttons  .themeButton:hover{
+    background-color: #ba254a;
+    border-color: transparent;
+    color: white;
+    transition: all 0.5s;
+}
+
+.buttons .btn__outline__primary:hover{
+    background-color: #dc4f72;
+    transition: all 0.5s;
+}
+
+/* FOOTER */
+
+.footer__content{
+    background-color: #f7f9fc;
+}
+
+.item__left .mainitem__left h3{
+    font-size: 20px;
+    line-height: 25px;
+    color: #2c3038;
+    margin-bottom: 30px;
+    font-weight: 700;
+
+}
+
+.item__left .mainitem__left li{
+    display: block;
+    list-style: none;
+    margin: 10px 0;
+
+}
+
+.item__left .mainitem__left li a{
+    color: #656f7b;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 25px;
+    padding: 0;
+    text-transform: capitalize;
+    text-decoration: none;
+}
+
+.item__left .mainitem__left li a:hover{
+    color: #dc4f72;
+    opacity: 0.7;
+    transition: all 0.7s;
+}
+
+.item__right h3{
+    font-size: 20px;
+    line-height: 25px;
+    color: #2c3038;
+    margin-bottom: 30px;
+    font-weight: 700;
+}
+
+.item__right .mainitem__right{
+    background-color: white;
+    padding: 2em;
+    border-radius: 5px;
+    box-shadow: 1px 5px 7.5px rgba(196, 196, 196, 0.2);
+
+}
+
+.item__right .mainitem__right h4{
+    font-size: 18px;
+    line-height: 25px;
+    color:#2c3038;
+    margin-bottom: 30px;
+    font-weight: 500;
+}
+
+.item__right input{
+    background: #f7f9fc;
+    border: none;
+    padding: 12px 20px;
+    font-size: 16px;
+    outline: none;
+    width: 78%;
+    color: #2c3038;
+    font-weight: 600;
+    border-radius: 5px;
+}
+
+.item__right button{
+        /* text-align: center; */
+        background: #dc4f72;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        font-weight: 600;
+        padding: 12px 20px;
+        cursor: pointer;
+        width: 20%;
+        color: white;
+        border-radius: 5px;
+}
+
+.item__right p{
+    line-height: 22px;
+    color: #5a5a5a;
+    font-size: 16px;
+}
+
+.footer__itembottom{
+    border-top: 1px solid #eaeaea;
+}
+
+.footer__itembottom .bottom__left p{
+    line-height: 22px;
+    color: #5a5a5a;
+    font-size: 16px;
+}
+
+.footer__itembottom .bottom__left a{
+    color: #2c3038;
+    text-decoration: none;
+}
+
+.footer__itembottom .bottom__left a:hover{
+    color: #dc4f72;
+    transition: all 0.5s;
+}
+
+.footer__itembottom .bottom__right li{
+    display: inline-block;
+    margin-right: 5px;
+    list-style: none;
+}
+
+.footer__itembottom .bottom__right li a{
+    color: #2c3038;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    display: inline-block;
+    border-radius: 50%;
+    text-align: center;
+    font-size: 15px;
+    line-height: 36px;
+}
+
+.footer__itembottom .bottom__right li a:hover{
+    color: #dc4f72;
+    transition: all 0.5s;
+}
+
+
